packages/jsii/test/negatives/neg.enum-members.1.ts
///!MATCH_ERROR: Enum members must use TRUMP_CASE: Goo

export enum MyEnum {
    FOO,
    Goo
}
